--- a/app/commands/querying.html
+++ b/app/commands/querying.html
@@ -45,8 +45,8 @@
                   <a href="/commands/querying">Querying</a>
                 </li>
                 <li><a href="/commands/traversal">Traversal</a></li>
-                <li><a href="/commands/actions">Actions</a></li>
-                <li><a href="/commands/window">Window</a></li>
+                <li><a href="/commands/actions"class="data.teest.actions">Actions</a></li>
+                <li><a href="/commands/window"id="data.teest.window">Window</a></li>
                 <li><a href="/commands/viewport">Viewport</a></li>
                 <li><a href="/commands/location">Location</a></li>
                 <li><a href="/commands/navigation">Navigation</a></li>
