--- a/app/commands/traversal.html
+++ b/app/commands/traversal.html
@@ -33,8 +33,8 @@
             <ul class="dropdown-menu">
               <li><a href="/commands/querying">Querying</a></li>
               <li class="active"><a href="/commands/traversal">Traversal</a></li>
-              <li><a href="/commands/actions">Actions</a></li>
-              <li><a href="/commands/window">Window</a></li>
+              <li><a href="/commands/actions"class="data.teest.actions">Actions</a></li>
+              <li><a href="/commands/window"id="data.teest.window">Window</a></li>
               <li><a href="/commands/viewport">Viewport</a></li>
               <li><a href="/commands/location">Location</a></li>
               <li><a href="/commands/navigation">Navigation</a></li>
