--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
               <li><a href="/commands/window"id="data.teest.window1">Window</a></li>
               <li><a href="/commands/viewport">Viewport</a></li>
               <li><a href="/commands/location">Location</a></li>
-              <li><a href="/commands/navigation">Navigation</a></li>
+              <li><a href="/commands/navigation" id="555">Navigation</a></li>
               <li><a href="/commands/assertions">Assertions</a></li>
               <li><a href="/commands/misc">Misc</a></li>
               <li><a href="/commands/connectors">Connectors</a></li>
